--- a/way/style.css
+++ b/way/style.css
@@ -65,3 +65,8 @@ h2 {
   margin-left: auto;
   margin-right: auto;
 }
+.link {
+  text-align: center;
+  font-family: "Padauk", sans-serif;
+  color: #d87e00;
+}
