--- a/way/style.css
+++ b/way/style.css
@@ -31,8 +31,12 @@ h1 {
   margin: 150px 0px 0px 150px;
   color: #0c5a96;
 }
+.weatherEmoji {
+  position: absolute;
+  top: 140px;
+  right: 700px;
+}
 img {
-  width: 500px;
   position: absolute;
   top: 150px;
   right: 400px;
