--- a/way/style.css
+++ b/way/style.css
@@ -36,6 +36,27 @@ h1 {
   top: 140px;
   right: 700px;
 }
+.tempF {
+  text-decoration: none;
+  font-size: 20px;
+  margin: 150px 0px 0px 150px;
+  color: #0c5a96;
+}
+.tempF:hover {
+  color: #d87e00;
+}
+.line-FC {
+  font-size: 20px;
+  color: #0c5a96;
+}
+.tempC {
+  text-decoration: none;
+  font-size: 20px;
+  color: #0c5a96;
+}
+.tempC:hover {
+  color: #d87e00;
+}
 img {
   position: absolute;
   top: 150px;
